2007-12-29; Alexandru Csete <oz9aec@gmail.com>

    * src/compat.[ch]:
    Added function to retrieve user config directory.
    
    * src/radio-conf.[ch]:
    Added files containing functions for reading and writing .radio files.


2007-11-16;	Alexandru Csete <oz9aec@gmail.com>

	* src/key-press-handler.[ch]:
	Added functions to snoop and manage key press events.

	* src/main.c:
	Use new key press event handler.

	* src/rig-gui-lcd.[ch]:
	Changed rig_gui_lcd_set_freq_digits and rig_gui_lcd_set_rit_digits
	to be public in order to allow direct setting of frequency display
	when managing events other than the ones occuring on the LCD area.
	
	

2007-11-15;	Alexandru Csete <oz9aec@gmail.com>

	* NEWS, TODO:
	Separate NEWS and future improvments.

	* src/Makefile.am:
	Allow build with Gtk+ 2.12 (GtkTooltips deprecated).
	

2007-09-15;	Alexandru Csete <oz9aec@gmail.com>

	* doc/um/xml:
	Added files that will eventually become a real user manual.


2007-01-17;	Alexandru Csete <oz9aec@gmail.com>

	* Makefile.am:
	Include win32 files in source distribution (bug #1630052).
	

2007-01-07;	Alexandru Csete <oz9aec@gmail.com>

	* src/grig-debug.c:
	Use g_get_current_time() instead of gettimeoftheday().

	* src/main.c:
	Use portable pixmap_file_name() instead of PACKAGE_PIXMAP_DIR, which
	only works on Unix (bug #1629905).
	Removed other traces of PACKAGE_PIXMAP_DIR too.

	* src/rig-gui-lcd.c:
	* src/rig-gui-smeter.c:
	Removed traces of PACKAGE_PIXMAP_DIR.

	* win32:
	Added files related to win32 build.
	

2006-12-16;	Alexandru Csete <oz9aec@gmail.com>

	* src/rig-data.c:
	Set 'new' flags to TRUE when receiving new values for mic gain and 
	compressor (bug #1613622).

	* src/rig-daemon.[ch]:
	Fixed bug that caused wrong handling of RF gain and IF shift
	(bug #1613622). Give RIG_CMD_AF higher priority to avoid jumpy
	behaviour (bug #1616926).

	* configure.ac, NEWS:
	Updated for 0.7.2
	
2006-07-24;	Alexandru Csete <oz9aec@gmail.com>

	* Makefile.am: