@@ -1,3 +1,10 @@
+2007-12-31; Alexandru Csete <oz9aec@gmail.com>
+
+    * src/rig-selector.[ch]:
+    Added widget showing a list of selected radios. Some basic functionality
+    but far from finished.
+    
+
 2007-12-29; Alexandru Csete <oz9aec@gmail.com>
 
     * src/compat.[ch]:
